<resources>
    <string name="app_name">CodeTribe Connect</string>
    <string name="info">CodeTribe Academy Launched on 1 September 2014 as a partnership between The Innovation Hub and mLab Southern Africa to increase the skills of young ICT enthusiasts through  a dedicated programme to of practical development of high impact and market relevant solutions.
The academy focuses on Android SDK’s, Cloud, Architecture and design of innovative mobility solutions. The “Tribe” is more than just students sharing a class but rather a community of Coders who learn, work, code, hack and teach together to strengthen the group as a whole.
CodeTribe is a dedicated programme for developing the next generation of software developers. While established startups are welcome to have members participate in their own time and at own expense, they do not qualify for bursaries as full time students. Startups and their staff or members are advised to apply for incubation and acceleration support through Maxum Business Incubator and mLab.
If you think you have what it takes to be part of the Tribe then apply for available bursaries below or keep an eye out for any of our open classes that can be attended by any one interested in learning from a specific topic.</string>
    <string name="title_members">Members</string>
    <string name="title_tribes">CodeTribes</string>
    <string name="my_preference" />
    <string name="my_preference_key" />
    <string name="title_portfolio">Portfolio</string>
    <string name="login_email_label">Login with Email</string>
    <string name="login_phone_label">Login with Phone Number</string>
    <string name="account">Account</string>
    <string name="id_label">Account ID</string>
    <string name="phone_label">Phone Number</string>
    <string name="email_label">Email</string>
    <string name="logout_label">Log Out</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_home">Portfolio</string>
    <string name="title_dashboard">Tribes</string>
    <string name="title_notifications">Chat</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="sign_up">Sign Up</string>
    <string name="tab_text_1">Skills</string>
    <string name="tab_text_2">Education</string>
    <string name="tab_text_3">Employment</string>
    <string name="invite_menu_label">Invite</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="select_picture_title">Get Photo From</string>
    <string name="send_button_label">SEND</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="indian">Indian</string>
    <string name="colored">Colored</string>
    <string name="app_name_spin">RecyclerViewSearchBoX</string>
    <string name="date_picker_title">Select Start Date</string>
    <string name="employed_status">Employed</string>
    <string name="unemployed_status">Unemployed</string>
    <string name="self_employed_status">Self Employed</string>
    <string name="salary_1">less 2000 p.m</string>
    <string name="salary_2">2000–4000 p.m</string>
    <string name="salary_3">4000–6000 p.m</string>
    <string name="salary_4">6000–8000 p.m</string>
    <string name="salary_5">8000–10000 p.m</string>
    <string name="salary_6">more than 10000 p.m</string>
    <string name="in_program">In Program</string>
    <string name="post_program">Post Program</string>
    <string name="soweto">soweto_codetribe</string>
    <string name="tembisa">thembisa_codetribe</string>
    <string name="pretoria">pretoria_codetribe</string>
    <string name="tab_soweto">Soweto</string>
    <string name="tab_tembisa">Tembisa</string>
    <string name="tab_pretoria">Pretoria</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="tab_confirmed">Confirmed</string>
    <string name="tab_rejected">Rejected</string>
    <string name="action_settings1">Settings</string>
    <string name="action_admin_profile">Admin Profile</string>
    <string name="action_logout">Logout</string>
    <string name="list_of_members">List of Members</string>
    <string name="add_member">Add Member</string>
    <string name="accept_member">Accept Member</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="decline_member">Decline Member</string>
    <string name="title_activity_main4">Main</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="section_format1">Hello World from section: %1$d</string>
    <string-array name="array_code_tribe_option">
        <item>@string/tab_soweto</item>
        <item>@string/tab_pretoria</item>
        <item>@string/tab_tembisa</item>
    </string-array>
    <string-array name="array_history">
        <item>@string/tab_confirmed</item>
        <item>@string/tab_rejected</item>


    </string-array>
    <string-array name="array_employment_option">
        <item>@string/employed_status</item>
        <item>@string/unemployed_status</item>
        <item>@string/self_employed_status</item>
    </string-array>
    <string-array name="array_employee_options">
        <item>@string/soweto</item>
        <item>@string/pretoria</item>
        <item>@string/tembisa</item>
    </string-array>
    <string-array name="array_gender_options">
        <item>@string/female</item>
        <item>@string/male</item>
    </string-array>
    <string-array name="array_ethnicity_option">
        <item>@string/black</item>
        <item>@string/white</item>
        <item>@string/indian</item>
        <item>@string/colored</item>
    </string-array>
    <string-array name="array_salary_option">
        <item>@string/salary_1</item>
        <item>@string/salary_2</item>
        <item>@string/salary_3</item>
        <item>@string/salary_4</item>
        <item>@string/salary_5</item>
        <item>@string/salary_6</item>
    </string-array>
    <string-array name="array_status_options">
        <item>@string/in_program</item>
        <item>@string/post_program</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="user_portfolio">Portfolio</string>
    <string name="projects" />
    <string name="tribes" />
    <string name="alumni" />
    <string name="todo" />
    <string name="personal_details">Personal Details</string>
    <string name="name_text">Name</string>
    <string name="name_hint">eg. Kratos</string>
    <string name="surname_text">Surname</string>
    <string name="age_text">Age</string>
</resources>