<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.android.connectcodetribe.FullscreenActivity2">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/userImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="TODO"
                android:scaleType="centerCrop"
                android:src="@drawable/kb" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:weightSum="3"
            android:baselineAligned="false"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/userCodeTribeImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_codetribe_buttton"
                android:padding="24dp"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/ic_school_black"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/userCodeTribeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/tribes"
                android:textStyle="bold"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/userStatusImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_status_button"
                android:padding="24dp"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/ic_alumni_black"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/userStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/alumni"
                android:textStyle="bold"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <ImageButton
                android:id="@+id/userGithubImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_github_button"
                android:padding="24dp"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/ic_github_black"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/userGihubProjects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/projects"
                android:textStyle="bold" />
        </LinearLayout>



    </FrameLayout>
</android.support.v4.widget.NestedScrollView>