<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.connectcodetribe.Admin_profileView">

    <android.support.v7.widget.CardView
        android:id="@+id/profil_personal_title_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        app:cardCornerRadius="4dp"
        android:padding="8dp"
        android:layout_weight="4">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/personal_details"
            android:layout_weight="1"
            android:padding="8dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/profile_personal_title_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        app:cardCornerRadius="4dp"
        android:padding="8dp"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:text="@string/name_text"
                    android:gravity="center_vertical"
                    android:textColor="#000"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/profile_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:textColor="#000"
                    android:text="@string/name_hint"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/surname_text"
                    android:gravity="center_vertical"
                    android:textSize="12sp"
                    android:textColor="#000"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:textColor="#000"
                    android:id="@+id/profile_surname_edit_text"
                    android:text="e.g  War" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:text="@string/age_text"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:id="@+id/profile_age_edit_text"
                    android:text="e.g 12" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:text="Gender"
                    android:gravity="center_vertical"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/profile_gender_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"
                    android:textSize="12sp"
                    android:paddingEnd="16dp"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:text="Ethnicity"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/profile_ethnicity_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"
                    android:textSize="12sp"
                    android:paddingEnd="16dp"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:text="Cell Number"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:id="@+id/profile_cell_number_edit_text"
                    android:textColor="#000"
                    android:text="e.g 072 984 4608" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:text="Email"
                    android:textColor="#000"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:id="@+id/profile_email_edit_text"
                    android:textColor="#000"
                    android:text="e.g kratoswar@gmail.com" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="end">


                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/profile_personal_info_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="center"
                    android:text="@string/button_text_save"
                    app:srcCompat="@drawable/ic_person_add_white"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>


            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
